<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/messages_header"
        android:icon="@drawable/ic_baseline_message_24">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header"
        android:icon="@drawable/ic_baseline_settings_24">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="Notifications">

        <SeekBarPreference
            android:key="volume_notification"
            android:title="volume"
            app:showSeekBarValue="true"
            android:defaultValue="50"/>

        <SwitchPreference
            android:key="notifications"
            android:title="Disable notifications"
            android:summaryOn="You will no longer recieve notifications"
            android:summaryOff="You will recieve all notifications"/>



    </PreferenceCategory>


</PreferenceScreen>